fixed link errors
fixed link errors and commented out unfinished pages

--- a/KidsAtHomeExperiments.html
+++ b/KidsAtHomeExperiments.html
@@ -60,10 +60,10 @@
     
     <!-- Set links and image for each item -->
     <div class="dContent">
-      <div class="polaroidRight">
+      <!--<div class="polaroidRight">
         <img src="images/image-1.jpg" alt="Volcano" style="width:100%">
         <a class="aContentLink" href="KidsAtHomePaperTreasureHunt.html" ontouchstart="">Volcano</a>
-      </div>
+      </div>-->
   
       <div class="polaroidLeft">
         <img src="images/aliengootest.jpg" alt="Alien Goo" style="width:100%">
