--- a/KidsAtHomeGames.html
+++ b/KidsAtHomeGames.html
@@ -58,10 +58,10 @@
     
     <!-- Set links and image for each item -->
     <div class="dContent">
-      <div class="polaroidRight">
+      <!--<div class="polaroidRight">
         <img src="images/image-1.jpg" alt="Sardines" style="width:100%">
         <a class="aContentLink" href="KidsAtHomeGamesSardines.html" ontouchstart="">Sardines</a>
-      </div>
+      </div>-->
   
       <div class="polaroidLeft">
         <img src="images/stuckmudrunning.jpg" alt="Stuck in the Mud" style="width:100%">
