--- a/KidsAtHomeGamesMarbles.html
+++ b/KidsAtHomeGamesMarbles.html
@@ -57,7 +57,7 @@
     
     <!-- Use lightbox2 for photo display ??-->
     <div class="dContentPgTitle"> 
-      <a class="aContentPgTitleLink" href="KidsAtHomeModels.html">Games</a>
+      <a class="aContentPgTitleLink" href="KidsAtHomeGames.html">Games</a>
       <p class="pContentPgTitle">Marbles</p>
     </div>
     
