--- a/KidsAtHomeModelsCardHouse.html
+++ b/KidsAtHomeModelsCardHouse.html
@@ -57,7 +57,7 @@
     
     <!-- Use lightbox2 for photo display ??-->
     <div class="dContentPgTitle"> 
-      <a class="aContentPgTitleLink" href="KidsAtHomeGames.html">Models</a>
+      <a class="aContentPgTitleLink" href="KidsAtHomeModels.html">Models</a>
       <p class="pContentPgTitle">Card Houses</p>
     </div>
     
