--- a/KidsAtHomeV3.html
+++ b/KidsAtHomeV3.html
@@ -4,6 +4,7 @@
 <head>
     <!-- viewport - indicates to browser that page needs to be scaled to fit the screen -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="homepage for kids activity ideas website including games, cardboard models, baking, experiments and things to do with paper">
     <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/big-bottom-cartoon-normal" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="KidsAtHomeV3.css" type="text/css"/>
     <link rel="stylesheet" media="(max-width:800px)" href="KidsAtHomeV3-small.css" type="text/css"/>
