--- a/KidsAtHomeBakingLargeCakes.html
+++ b/KidsAtHomeBakingLargeCakes.html
@@ -4,6 +4,7 @@
 <head>
     <!-- viewport - indicates to browser that page needs to be scaled to fit the screen -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="baking large cakes with kids activities page">
     <link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/big-bottom-cartoon-normal" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="KidsAtHomeV3.css" type="text/css"/>
     <link rel="stylesheet" media="(max-width:700px)" href="KidsAtHomeV3-small.css" type="text/css"/>
