added more content and added links to images

--- a/KidsAtHomeExperiments.html
+++ b/KidsAtHomeExperiments.html
@@ -61,10 +61,10 @@
     
     <!-- Set links and image for each item -->
     <div class="dContent">
-      <!--<div class="polaroidRight">
-        <img src="images/image-1.jpg" alt="Volcano" style="width:100%">
-        <a class="aContentLink" href="KidsAtHomePaperTreasureHunt.html" ontouchstart="">Volcano</a>
-      </div>-->
+      <div class="polaroidRight">
+        <a href="KidsAtHomeExperimentsVolcano.html" ontouchstart=""><img src="images/volcanoeruption.jpg" alt="Volcano" style="width:100%"></a>
+        <a class="aContentLink" href="KidsAtHomeExperimentsVolcano.html" ontouchstart="">Volcano</a>
+      </div>
   
       <div class="polaroidLeft">
         <img src="images/aliengootest.jpg" alt="Alien Goo" style="width:100%">
