--- a/KidsAtHomeExperimentsVolcano.html
+++ b/KidsAtHomeExperimentsVolcano.html
@@ -73,32 +73,32 @@
     
     <div class="dContentPics">
       <div class="polaroidRight">
-        <a href="images/image-1.jpg" data-lightbox="test" data-title="Get container">
-          <img src="images/image-1.jpg" alt="Get container" style="width:100%">
+        <a href="images/volcanoequipment.jpg" data-lightbox="test" data-title="Get container">
+          <img src="images/volcanoequipment.jpg" alt="Get container" style="width:100%">
         </a>
         <p class="pContentText">Get a container for your volcano - the smaller the container the less soda and vinegar you'll need for it to
         spill over.  This could get messy so you might want to do it outside or on a tray</p>
       </div>
       
       <div class="polaroidCentre">
-        <a href="images/blowbubbles.jpg" data-lightbox="test" data-title="Create volcano">
-          <img src="images/blowbubbles.jpg" alt="Create volcano" style="width:100%">
+        <a href="images/volcanoplasticene.jpg" data-lightbox="test" data-title="Create volcano">
+          <img src="images/volcanoplasticene.jpg" alt="Create volcano" style="width:100%">
         </a>
         <p class="pContentText">Before you start adding ingredients you could make your container look like a volcano by getting the kids to build
         plasticine onto the sides - but this is optional</p>
       </div>
 
       <div class="polaroidLeft">
-        <a href="images/image-2.jpg" data-lightbox="test" data-title="Get ingredients">
-          <img src="images/image-2.jpg" alt="Get ingredients" style="width:100%">
+        <a href="images/volcanobicarb.jpg" data-lightbox="test" data-title="Get ingredients">
+          <img src="images/volcanobicarb.jpg" alt="Get ingredients" style="width:100%">
         </a>
         <p class="pContentText">Get your container and let the kids add 1 or 2 tablespoons of bicarbonate of soda and about a
         teaspoon of washing up liquid. Add red food colouring if you want red lava</p>
       </div>
 
       <div class="polaroidCentre">
-        <a href="images/blowbubbles.jpg" data-lightbox="test" data-title="The eruption">
-          <img src="images/blowbubbles.jpg" alt="The eruption" style="width:100%">
+        <a href="images/volcanoeruption.jpg" data-lightbox="test" data-title="The eruption">
+          <img src="images/volcanoeruption.jpg" alt="The eruption" style="width:100%">
         </a>
         <p class="pContentText">This is the exciting part! Pour vinegar into the container and watch everything fizz and bubble up over
         the sides of the container like a volcanic eruption!</p>
