added links to images

--- a/KidsAtHomeBaking.html
+++ b/KidsAtHomeBaking.html
@@ -75,17 +75,17 @@
     <!-- Set links and image for each item -->
     <div class="dContent">
       <div class="polaroidRight">
-        <img src="images/biscuits.jpg" alt="Biscuits" style="width:100%">
+        <a href="KidsAtHomeBakingBiscuits.html" ontouchstart=""><img src="images/biscuits.jpg" alt="Biscuits" style="width:100%"></a>
         <a class="aContentLink" href="KidsAtHomeBakingBiscuits.html" ontouchstart="">Biscuits</a>
       </div>
   
       <div class="polaroidLeft">
-        <img src="images/largecakes.jpg" alt="Cakes" style="width:100%">
+        <a href="KidsAtHomeBakingLargeCakes.html" ontouchstart=""><img src="images/largecakes.jpg" alt="Cakes" style="width:100%"></a>
         <a class="aContentLink" href="KidsAtHomeBakingLargeCakes.html" ontouchstart="">Large Cakes</a>
       </div>
     
       <div class="polaroidCentre">
-        <img src="images/cakesdecorate3.jpg" alt="Fairy Cakes" style="width:100%">
+        <a href="KidsAtHomeBakingFairyCakes.html" ontouchstart=""><img src="images/cakesdecorate3.jpg" alt="Fairy Cakes" style="width:100%"></a>
         <a class="aContentLink" href="KidsAtHomeBakingFairyCakes.html" ontouchstart="">Fairy Cakes</a>
       </div>
       
